<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name2"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="227dp"
        android:layout_height="42dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="76dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_number2"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="76dp"
        android:text="@string/number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="120dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_address2"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="120dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="382dp"
        android:layout_height="38dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/black"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>