<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="344dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_user"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="432dp"
        android:backgroundTint="@color/black"
        android:text="@string/show_old_users"

        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="44dp"
        android:autofillHints="name"
        android:background="@drawable/button_style"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:background="@drawable/button_style"
        android:hint="@string/user_number"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:hint="@string/user_address"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_persons"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_marginBottom="48dp"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>